--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "gulp-uglify": "^3.0.2",
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "gulp-babel": "^7.0.1"
+    "gulp-babel": "^7.0.1",
+    "gulp-cache": "^1.1.3"
   },
   "browserslist": [
     "last 2 version",
